# SquareWorld

./: CMakeLists.txt  README.md  build  build.sh  imgui.ini  scene.json
source/: main.cpp
source/game/mine_world/world/: block.h  chunk.h  world.h
source/utils/: camera.cpp  camera.h  gamecamera.cpp  gamecamera.h  mesh.cpp  mesh.h  renderer.cpp  renderer.h  shape.cpp  shape.h  spotlight.cpp  spotlight.h  window.cpp  window.h  window.hpp  windowCreator.h  windowCreator.hpp  window_manager.hpp
source/ventor/: config.h  config.hpp  conflict.hpp  impl_glx.cpp  impl_glx.h  platform.h  platform.hpp  x11.h  x11.hpp
source/ventor/gl/: api.h
tests/: CMakeLists.txt  main.cpp
tests/scripts/: bird.lua  types.lua
tests/source/: bird.h  register.h  render.h
